CIVIMM-249: Fix top spacing issues for customised screens

--- a/scss/civicrm/administer/customize-data/_customize-data.scss
+++ b/scss/civicrm/administer/customize-data/_customize-data.scss
@@ -1,3 +1,4 @@
+//stylelint-disable selector-max-compound-selectors, max-nesting-depth, selector-max-id
 &#{civi-page('admin-custom-group')} {
   #options table td:last-of-type {
     width: 250px;
@@ -140,12 +141,6 @@
 
     tr {
       padding: 0;
-
-      &:first-child {
-        td {
-          padding-top: 20px;
-        }
-      }
 
       &:last-child {
         td {
